added student API documentations
